# StreamCut

./: .env.example  .env.production  .gitignore  AGENTS.md  CLAUDE.md  Claude_Global_Instructions.docx (1).md  LICENSE  PROGRESS.md  PROJECT_DOCS.md  README.md  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  pyrightconfig.json  requirements.txt
backend/: Dockerfile  Dockerfile.gpu  Dockerfile.worker  auth.py  config.py  main.py  requirements.txt  worker.py
backend/models/: schemas.py
backend/routers/: auth.py  oauth.py  presets.py
backend/scripts/: prepare_footage.py
backend/services/: analyzer.py  caption_renderer.py  cutter.py  downloader.py  footage_library.py  post_generator.py  publisher.py  reframer.py  storage.py  subtitle_extractor.py  token_encryption.py  transcriber.py
backend/utils/: helpers.py
frontend/: app.js  index.html  style.css
scripts/: deploy.sh
tests/: test_helpers.py  test_schemas.py
